# lwgsm

./: .gitignore  CMakeLists.txt  Kconfig
lwgsm/src/api/: lwgsm_netconn.c  lwgsm_network_api.c
lwgsm/src/apps/mqtt/: lwgsm_mqtt_client.c  lwgsm_mqtt_client_api.c
lwgsm/src/include/lwgsm/: lwgsm.h  lwgsm_conn.h  lwgsm_dtmf.h  lwgsm_includes.h  lwgsm_netconn.h  lwgsm_network.h  lwgsm_opt.h  lwgsm_parser.h  lwgsm_private.h  lwgsm_sleep.h  lwgsm_typedefs.h
lwgsm/src/include/lwgsm/apps/: lwgsm_mqtt_client.h
lwgsm/src/lwgsm/: lwgsm.c  lwgsm_conn.c  lwgsm_dtmf.c  lwgsm_int.c  lwgsm_parser.c  lwgsm_sleep.c
lwgsm/src/system/: lwgsm_ll_esp32.c  lwgsm_sys_freeRTOS.c
